--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bulma": "^0.8.0",
+    "bulma-toast": "^1.5.4",
+    "dotenv": "^8.2.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
