--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bulma": "^0.8.0",
     "bulma-toast": "^1.5.4",
     "dotenv": "^8.2.0",
+    "js-cookie": "^2.2.1",
     "node-sass": "^4.13.1",
     "react": "^16.12.0",
     "react-bulma-components": "^3.1.3",
