Switching imports from relative to absolute
Saves traversing up directories a bunch of times!

--- a/package.json
+++ b/package.json
@@ -27,7 +27,14 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "settings": {
+      "import/resolver": {
+        "node": {
+          "paths": ["src"]
+        }
+      }
+    }
   },
   "browserslist": {
     "production": [
