Updating Yarn packages

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
     "settings": {
       "import/resolver": {
         "node": {
-          "paths": ["src"]
+          "paths": [
+            "src"
+          ]
         }
       }
     }
